--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,14 +7,22 @@ input,
 textarea,
 select,
 option {
-  font-family: 'DINAlternate','Unna', sans-serif;
+  font-family: 'DIN Alternate','Unna', sans-serif;
   font-size: 14px;
   color: #86763F;
+}
+.header_container,
+.footer_container{
+    margin: 0 auto;
+    max-width: 1760px;
+    width: 100%;
+
 }
 .container{
     margin: 0 auto;
     max-width: 1760px;
     width: 100%;
+    background-color:rgba(178, 173, 162, 0.1);
 }
 header{
     background-color:#ffffff;
@@ -91,8 +99,9 @@ header{
     transition-duration: 0.3s;
 }
 .medium_wrapper{
-    background-color:rgba(178, 173, 162, 0.1);
     position: relative;
+    width: 1200px;
+    margin: auto;
 
 }
 .medium_boxes{
@@ -114,6 +123,9 @@ header{
 .medium__content{
     width: 386px;
 }
+.medium__content a{
+    text-decoration: none;
+}
 .medium__boxes-left h3,
 .medium__boxes-right h3{
     margin-top: 51px;
@@ -122,6 +134,7 @@ header{
     font-weight: normal;
     color: #461540;
     width: 100%;
+
 }
 .medium__boxes-left p,
 .medium__boxes-right p{
@@ -131,6 +144,7 @@ header{
     font-weight: normal;
     color: #5A4A41;
     width: 100%;
+    line-height: 24px;
 }
 .arrow_right{
     width: 34px;
@@ -140,16 +154,10 @@ header{
     margin-left: 50px;
     position: absolute;
 }
-.arrow_right i{
-    font-size: 20px;
-    color: #ffffff;
-    display: flex;
-    justify-content: center;
-    margin-top: 7px;
-}
 .product_wrapper{
-    background-color:rgba(178, 173, 162, 0.1);
     padding-top:140px;
+    width: 1200px;
+    margin: auto;
 
 }
 .box_content-left{
@@ -158,7 +166,7 @@ header{
     grid-gap:48px;
     justify-content: center;
     margin-top: 105px;
-    border-bottom: 1px solid;
+    border-bottom: 1px solid rgba(178, 173, 162, 0.5);
 }
 .box_content-right{
     display: grid;
@@ -166,6 +174,7 @@ header{
     grid-gap:48px;
     justify-content: center;
     margin-top: 105px;
+    border-bottom: 1px solid rgba(178, 173, 162, 0.5);
 
 }
 .box__content{
@@ -190,12 +199,17 @@ header{
     height: 154px;
 
 }
-.box__content span{
+.box__content a{
     font-size: 24px;
     color:#86763F;
     font-weight: normal;
     height: 24px;
+    text-decoration: none;
+}
 
+.box__content img{
+    margin-right: 15px;
+    margin-bottom: -5px;
 
 }
 
@@ -205,9 +219,62 @@ header{
     margin-bottom: 105px;
     color: #B2ADA2;
 }
+.info_wrapper{
+    padding-top:140px;
+    width: 1200px;
+    margin: auto;
+
+}
+.info_tittle{
+    font-size: 38px;
+    color:#86763F;
+    font-weight: normal;
+}
+.boxes_info{
+    display: grid;
+    grid-template-columns: 368px 368px 368px;
+    grid-gap: 48px;
+    justify-content: center;
+    width: 1200px;
+}
+.info{
+    margin-top: 40px;
+}
+.info__content{
+    margin-top: 20px;
+}
+.info__content h3{
+    font-size: 28px;
+    font-weight: normal;
+}
+.info__content span{
+    font-size: 18px;
+    font-weight: normal;
+
+}
+.info_item{
+    margin-top: 33px;
+    margin-bottom: 85px;
+}
+.info_list{
+    margin-bottom: 22px;
+    display: grid;
+    grid-template-columns: 22px auto;
+    grid-gap:15px;
+
+
+}
+.info_list a{
+    font-size: 18px;
+    color: #5A4A41;
+    text-decoration: none;
+
+}
+
 footer{
     height: 316px;
 }
+
 .footer_content{
     margin-top: 80px;
     text-align: center;
