--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,6 +23,7 @@ option {
     max-width: 1760px;
     width: 100%;
     background-color:rgba(178, 173, 162, 0.1);
+    
 }
 header{
     background-color:#ffffff;
@@ -67,7 +68,7 @@ header{
 }
 .nav__item a:active{
     color: #461540;
-    border-top: 2px solid;
+    border-top: 1px solid;
 }
 .block_section{
     float: left;
@@ -268,7 +269,9 @@ header{
     font-size: 18px;
     color: #5A4A41;
     text-decoration: none;
-
+}
+.info_list a:hover{
+    color:#070006;
 }
 
 footer{
@@ -288,4 +291,148 @@ footer{
     font-size: 18px;
     font-weight: normal ;
     color:#B2ADA2;
+}
+
+ Contact 
+  .content_wrap{
+      margin:0 auto;
+      max-width: 1200px;
+      width: 100%;
+    
+  }
+.contact_content{
+    display: grid;
+    grid-template-columns: 784px 367px;
+    grid-gap: 48px;
+    margin:0 auto;
+    max-width: 1200px;
+    width: 100%;
+    padding-top: 151px;
+}
+
+.contact_tittle{
+    margin-top: -75px;
+}
+.contact_tittle a{
+    text-decoration: none;
+    color: #86763F;
+    font-size: 38px;
+    font-weight: normal;
+}
+.contact_tittle a:hover{
+    color: #5A4A41;
+}
+.contact_number{
+    margin-top: 40px;
+    height:322px;
+    width: 100%;
+    margin-bottom: 79px;
+    background-color: #ffffff;
+    padding: 50px;
+}
+.contact_number p{
+    font-size: 18px;
+    color:#5A4A41;
+    line-height: 28px;
+    font-weight: normal;
+    margin-bottom: 30px;
+
+}
+.number_item{
+    margin-bottom: 20px;
+}
+.number_item a{
+    font-size: 28px;
+    color:#86763F;
+    font-weight: normal;
+    text-decoration: none;
+    
+}
+.contact__content-left{
+    display: grid;
+    grid-template-columns: 416px 312px ;
+    grid-gap:56px
+
+}
+.contact__content-right {
+    display: grid;
+    grid-template-columns: 312px 416px;
+    grid-gap:56px
+}
+
+.contact_box{
+    border-bottom: 1px solid rgba(178, 173, 162, 0.5) ;
+    padding-bottom: 60px;
+    margin-bottom: 60px;
+
+}
+.contact_box:last-child{
+    border-bottom:none ;
+    
+}
+.contact_box h2{
+    font-size: 32px;
+    color:#86763F;
+    margin-bottom: 20px;
+}
+.contact__content-left p,
+.contact__content-right p{
+    font-size: 16px;
+    font-weight: normal;
+    color: #5A4A41;
+    line-height: 26px;
+
+
+}
+.contact__thumb{
+    height: 244px;
+}
+
+.form_wrapper{
+    height: 557px;
+    width: 100%;
+    padding: 35px 40px 52px;
+    background: #ffffff;
+}
+.form_wrapper h3{
+    font-size: 28px;
+    font-weight: normal;
+    color:#86763F;
+    margin-bottom: 17px;
+}
+.contactform__input{
+    margin-bottom: 20px;
+    width: 100%;
+    padding: 10px 21px;
+}
+.contactform__input-message{
+    padding: 10px 208px 141px 21px;
+    width: 100%;
+    margin-bottom: 20px;
+    padding-left: 20px;
+}
+.btn_submit{
+    width: 100%;
+    height: 40px;
+    color:#ffffff;
+    background-color: #461540;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+}
+.btn_submit:hover{
+    background-color:rgba(178, 173, 162, 0.1);
+    color:#461540;
+    border: 3px solid
+}
+.info_wrapper-contact{
+    background-color: #ffffff;
+    margin-top: 55px;
+    width: 100%;
+    padding: 50px 40px;
+}
+
+.info-contact{
+
+
 }
